Fixed body alignment in css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Default settings for the entire webpage. */
 * {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     box-sizing: border-box;
@@ -5,10 +6,7 @@
     margin: 0;
 }
 
-body {
-    background-color: #eeeef7;
-}
-
+/* Settings for the header flexbox. */
 header {
     display: flex;
     color: #92ccce;
@@ -16,6 +14,7 @@ header {
     flex-direction: column;
 }
 
+/* Added flexbox to this section in order for the links to float on top of my background image. */
 .header-nav {
     display: flex;
     background-color: #31343d;
@@ -23,6 +22,7 @@ header {
     align-items: center;
 }
 
+/* Style for my name section. */
 header h1 {
     font-size: 36px;
     padding: 10px 20px 10px 50px;
@@ -31,17 +31,22 @@ header h1 {
     color: #445877;
 }
 
+/* Style for the links. */
 header nav a {
     color: #92ccce;
     padding: 20px;
+    flex: 0 1 auto;
 }
 
+/* Created a flexbox so that my portrait and secondary title floats separately from my name
+and links. */
 .header-title {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
 }
 
+/* Added specific styling to my .self-portrait image to look a certain way. */
 .self-portrait {
     object-fit: cover;
     object-position: top;
@@ -51,6 +56,7 @@ header nav a {
     padding: 20px;
 }
 
+/* Specific styling set for the main header h2 */
 header h2 {
     color: #31343d;
     background-color: #92ccce;
@@ -59,22 +65,41 @@ header h2 {
     margin: 0px 20px 20px;
 }
 
-.content {
+/* Set the background and padding around the content. */
+main {
     display: flex;
-    padding: 20px 0px 0px 0px;
+    background-color: #eeeef7;
+    padding: 20px 20px 20px 80px;
+}
+
+.content {
+    flex: 1 0;
+    justify-items: space-between;
+}
+
+.content-main {
+    display: flex;
+    align-items: center;
+}
+
+.content-main p {
+    text-align: justify;
+    padding-left: 10px;
+    width: 70%;
 }
 
 .content h2 {
+    word-spacing: 300px;
     font-size: 36px;
     width: 20%;
     text-align: right;
-    margin-right: 20px;
-    padding: 0px 10px 0px 100px;
+    border-right-width: 5px;
     border-right-color: #31343d;
     border-right-style: solid;
+    padding: 0px 5px;
 }
 
-.featured-project {
+/* .featured-project {
     display: flex;
     height: 200px;
     align-items: stretch;
@@ -90,7 +115,7 @@ header h2 {
 }
 
 .featured-project img:hover {
-    color: #445877
+    background-color: #445877
 }
 
 .project-title {
@@ -126,10 +151,11 @@ h3 {
     justify-items: center;
     padding: 5px 5px 0px 0px;
 }
+*/
 
 .contacts {
     display: flex;
-    width: 100%;
+    width: 70%;
     align-items: center;
     justify-content: space-around;
 }
@@ -137,4 +163,8 @@ h3 {
 .contacts a {
     padding: 20px;
     justify-items: stretch;
+}
+
+@media screen and (max-width: 600px) {
+    .content: 100%;
 }
